# This file was automatically created by "Export_CMakeLists" script.

set(srcs 
    "./src/base/basepic.c"
    "./src/base/ftadvanc.c"
    "./src/base/ftapi.c"
    "./src/base/ftbase.c"
    "./src/base/ftbbox.c"
    "./src/base/ftbdf.c"
    "./src/base/ftbitmap.c"
    "./src/base/ftcalc.c"
    "./src/base/ftcid.c"
    "./src/base/ftdbgmem.c"
    "./src/base/ftdebug.c"
    "./src/base/ftfstype.c"
    "./src/base/ftgasp.c"
    "./src/base/ftgloadr.c"
    "./src/base/ftglyph.c"
    "./src/base/ftgxval.c"
    "./src/base/ftinit.c"
    "./src/base/ftlcdfil.c"
    "./src/base/ftmm.c"
    "./src/base/ftobjs.c"
    "./src/base/ftotval.c"
    "./src/base/ftoutln.c"
    "./src/base/ftpatent.c"
    "./src/base/ftpfr.c"
    "./src/base/ftpic.c"
    "./src/base/ftrfork.c"
    "./src/base/ftsnames.c"
    "./src/base/ftstream.c"
    "./src/base/ftstroke.c"
    "./src/base/ftsynth.c"
    "./src/base/ftsystem.cpp"
    "./src/base/fttrigon.c"
    "./src/base/fttype1.c"
    "./src/base/ftutil.c"
    "./src/base/ftwinfnt.c"
    "./src/base/ftxf86.c"
    "./src/base/md5.c"
    "./src/cache/ftcache.c"
    "./src/cache/ftcbasic.c"
    "./src/cache/ftccache.c"
    "./src/cache/ftccmap.c"
    "./src/cache/ftcglyph.c"
    "./src/cache/ftcimage.c"
    "./src/cache/ftcmanag.c"
    "./src/cache/ftcmru.c"
    "./src/cache/ftcsbits.c"
    "./src/sfnt/sfdriver.c"
    "./src/sfnt/sfnt.c"
    "./src/sfnt/sfntpic.c"
    "./src/sfnt/sfobjs.c"
    "./src/sfnt/ttbdf.c"
    "./src/sfnt/ttcmap.c"
    "./src/sfnt/ttkern.c"
    "./src/sfnt/ttload.c"
    "./src/sfnt/ttmtx.c"
    "./src/sfnt/ttpost.c"
    "./src/sfnt/ttsbit.c"
    "./src/sfnt/ttsbit0.c"
    "./src/smooth/ftgrays.c"
    "./src/smooth/ftsmooth.c"
    "./src/smooth/ftspic.c"
    "./src/smooth/smooth.c"
    "./src/truetype/truetype.c"
    "./src/truetype/ttdriver.c"
    "./src/truetype/ttgload.c"
    "./src/truetype/ttinterp.c"
    "./src/truetype/ttobjs.c"
    "./src/truetype/ttpic.c"
    "./src/truetype/ttpload.c"
    "./src/truetype/ttsubpix.c"
    "./src/FileSupport.cpp"
    "./src/OpenFontRender.cpp"
)
idf_component_register(SRCS ${srcs}
                       INCLUDE_DIRS
                       "./src"
                       "./src/base"
                       "./src/cache"
                       "./src/freetype"
                       "./src/sfnt"
                       "./src/smooth"
                       "./src/truetype"
                       "./src/freetype/config"
                       "./src/freetype/internal"
                       "./src/freetype/internal/services"
)
